add composite functions and docs

--- a/README.Rmd
+++ b/README.Rmd
@@ -21,7 +21,7 @@ knitr::opts_chunk$set(
 [![R-CMD-check](https://github.com/CORE-forge/core-soi/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/CORE-forge/core-soi/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
-The goal of `coresoi` is to provide a _sandbox_ environment for researchers and anti-corruption analysts to interact with the indicators we've designed. We also offer mock data extracted from [dati.anticorruzione](https://dati.anticorruzione.it/index.html#/home) to aid in their analysis. Our hope is that this platform will facilitate more effective efforts against corruption and promote greater transparency in government.
+The goal of `coresoi` is to provide a _sandbox_ environment for researchers and anti-corruption analysts to interact with the indicators we've designed. We also offer mock data extracted from [dati.anticorruzione](https://dati.anticorruzione.it/index.html#/home) to aid in their analysis. Our hope is that this platform will facilitate and make more effective their efforts in fighting corruption and promote greater transparency in government.
 
 ## Installation
 
