add references to choice of elementary indicators and ad free usage plan to core API R wrapper

--- a/vignettes/articles/references.bib
+++ b/vignettes/articles/references.bib
@@ -101,3 +101,135 @@
 	url = {http://dx.doi.org/10.1207/s15327906mbr3003_4},
 	langid = {en}
 }
+
+@article{fazekas2017,
+	title = {Uncovering High-Level Corruption: Cross-National Objective Corruption Risk Indicators Using Public Procurement Data},
+	author = {Fazekas, {Mihály} and Kocsis, {Gábor}},
+	year = {2017},
+	month = {08},
+	date = {2017-08-24},
+	journal = {British Journal of Political Science},
+	pages = {155--164},
+	volume = {50},
+	number = {1},
+	doi = {10.1017/s0007123417000461},
+	url = {http://dx.doi.org/10.1017/S0007123417000461},
+	langid = {en}
+}
+
+@article{abdou2020,
+	title = {Corporate governance and earnings management nexus: Evidence from the
+            UK
+            and Egypt using neural networks},
+	author = {Abdou, Hussein A. and Ellelly, Nouran N. and Elamer, Ahmed A. and Hussainey, Khaled and Yazdifar, Hassan},
+	year = {2020},
+	month = {08},
+	date = {2020-08-29},
+	journal = {International Journal of Finance & Economics},
+	pages = {6281--6311},
+	volume = {26},
+	number = {4},
+	doi = {10.1002/ijfe.2120},
+	url = {http://dx.doi.org/10.1002/ijfe.2120},
+	langid = {en}
+}
+
+@article{klasnja2015,
+	title = {Microrandomized trials: An experimental design for developing just-in-time adaptive interventions.},
+	author = {Klasnja, Predrag and Hekler, Eric B. and Shiffman, Saul and Boruvka, Audrey and Almirall, Daniel and Tewari, Ambuj and Murphy, Susan A.},
+	year = {2015},
+	month = {12},
+	date = {2015-12},
+	journal = {Health Psychology},
+	pages = {1220--1228},
+	volume = {34},
+	number = {Suppl},
+	doi = {10.1037/hea0000305},
+	url = {http://dx.doi.org/10.1037/hea0000305},
+	langid = {en}
+}
+
+@article{fazekas2017a,
+	title = {Uncovering High-Level Corruption: Cross-National Objective Corruption Risk Indicators Using Public Procurement Data},
+	author = {Fazekas, {Mihály} and Kocsis, {Gábor}},
+	year = {2017},
+	month = {08},
+	date = {2017-08-24},
+	journal = {British Journal of Political Science},
+	pages = {155--164},
+	volume = {50},
+	number = {1},
+	doi = {10.1017/s0007123417000461},
+	url = {http://dx.doi.org/10.1017/S0007123417000461},
+	langid = {en}
+}
+
+@article{auriol2016,
+	title = {Public Procurement and Rent-Seeking: The Case of Paraguay},
+	author = {Auriol, Emmanuelle and Straub, {Stéphane} and Flochel, Thomas},
+	year = {2016},
+	month = {01},
+	date = {2016-01},
+	journal = {World Development},
+	pages = {395--407},
+	volume = {77},
+	doi = {10.1016/j.worlddev.2015.09.001},
+	url = {http://dx.doi.org/10.1016/j.worlddev.2015.09.001},
+	langid = {en}
+}
+
+@article{fazekas2016,
+	title = {An Objective Corruption Risk Index Using Public Procurement Data},
+	author = {Fazekas, {Mihály} and {Tóth}, {István János} and King, Lawrence Peter},
+	year = {2016},
+	month = {04},
+	date = {2016-04-25},
+	journal = {European Journal on Criminal Policy and Research},
+	pages = {369--397},
+	volume = {22},
+	number = {3},
+	doi = {10.1007/s10610-016-9308-z},
+	url = {http://dx.doi.org/10.1007/s10610-016-9308-z},
+	langid = {en}
+}
+
+@article{fazekas2016a,
+	title = {A Comprehensive Review of Objective Corruption Proxies in Public Procurement: Risky Actors, Transactions, and Vehicles of Rent Extraction},
+	author = {Fazekas, Mihaly and Cingolani, Luciana and TTth, Bence},
+	year = {2016},
+	date = {2016},
+	journal = {SSRN Electronic Journal},
+	doi = {10.2139/ssrn.2891017},
+	url = {http://dx.doi.org/10.2139/ssrn.2891017},
+	langid = {en}
+}
+
+@article{fazekas2017b,
+	title = {Uncovering High-Level Corruption: Cross-National Objective Corruption Risk Indicators Using Public Procurement Data},
+	author = {Fazekas, {Mihály} and Kocsis, {Gábor}},
+	year = {2017},
+	month = {08},
+	date = {2017-08-24},
+	journal = {British Journal of Political Science},
+	pages = {155--164},
+	volume = {50},
+	number = {1},
+	doi = {10.1017/s0007123417000461},
+	url = {http://dx.doi.org/10.1017/S0007123417000461},
+	langid = {en}
+}
+
+@article{fazekas2017c,
+	title = {Uncovering High-Level Corruption: Cross-National Objective Corruption Risk Indicators Using Public Procurement Data},
+	author = {Fazekas, {Mihály} and Kocsis, {Gábor}},
+	year = {2017},
+	month = {08},
+	date = {2017-08-24},
+	journal = {British Journal of Political Science},
+	pages = {155--164},
+	volume = {50},
+	number = {1},
+	doi = {10.1017/s0007123417000461},
+	url = {http://dx.doi.org/10.1017/S0007123417000461},
+	langid = {en}
+}
