--- a/vignettes/articles/useCoresoiAPI.Rmd
+++ b/vignettes/articles/useCoresoiAPI.Rmd
@@ -25,11 +25,11 @@ url <- "https://g7x6h7tfvk.execute-api.eu-west-2.amazonaws.com/dev"
 
 # Create a function to call the /aggiudicatari endpoint
 get_aggiudicatari <- function(api_key, limit, cig = NULL, ruolo = NULL, codice_fiscale = NULL,
-                               denominazione = NULL, tipo_soggetto = NULL, id_aggiudicazione = NULL,
-                               sort_param = NULL) {
+                              denominazione = NULL, tipo_soggetto = NULL, id_aggiudicazione = NULL,
+                              sort_param = NULL) {
   # Set the API endpoint for the /aggiudicatari endpoint
   endpoint <- "/aggiudicatari"
-  
+
   # Create the request URL with the specified parameters
   request_url <- paste0(url, endpoint, "?limit=", limit)
   if (!is.null(cig)) request_url <- paste0(request_url, "&cig=", cig)
@@ -39,21 +39,21 @@ get_aggiudicatari <- function(api_key, limit, cig = NULL, ruolo = NULL, codice_f
   if (!is.null(tipo_soggetto)) request_url <- paste0(request_url, "&tipo_soggetto=", tipo_soggetto)
   if (!is.null(id_aggiudicazione)) request_url <- paste0(request_url, "&id_aggiudicazione=", id_aggiudicazione)
   if (!is.null(sort_param)) request_url <- paste0(request_url, "&sort_param=", sort_param)
-  
+
   # Make the API request with the API key in the header
   response <- GET(request_url, add_headers("x-api-key" = api_key))
-  
+
   # Return the response as a JSON object
   content(response, as = "parsed")
 }
 
 # Create a function to call the /cigs endpoint
 get_cigs <- function(api_key, limit, cig = NULL, provincia = NULL, tipo_scelta_contraente = NULL,
-                      data_pubblicazione_min = NULL, data_pubblicazione_max = NULL,
-                      importo_lotto_min = NULL, importo_lotto_max = NULL) {
+                     data_pubblicazione_min = NULL, data_pubblicazione_max = NULL,
+                     importo_lotto_min = NULL, importo_lotto_max = NULL) {
   # Set the API endpoint for the /cigs endpoint
   endpoint <- "/cigs"
-  
+
   # Create the request URL with the specified parameters
   request_url <- paste0(url, endpoint, "?limit=", limit)
   if (!is.null(cig)) request_url <- paste0(request_url, "&cig=", cig)
@@ -63,21 +63,21 @@ get_cigs <- function(api_key, limit, cig = NULL, provincia = NULL, tipo_scelta_c
   if (!is.null(data_pubblicazione_max)) request_url <- paste0(request_url, "&data_pubblicazione_max=", data_pubblicazione_max)
   if (!is.null(importo_lotto_min)) request_url <- paste0(request_url, "&importo_lotto_min=", importo_lotto_min)
   if (!is.null(importo_lotto_max)) request_url <- paste0(request_url, "&importo_lotto_max=", importo_lotto_max)
-  
+
   # Make the API request with the API key in the header
   response <- GET(request_url, add_headers("x-api-key" = api_key))
-  
+
   # Return the response as a JSON object
   content(response, as = "parsed")
 }
 
 # Create a function to call the /stazione-appaltante endpoint
 get_stazione_appaltante <- function(api_key, limit, codice_fiscale = NULL, partita_iva = NULL,
-                                     denominazione = NULL, provincia_nome = NULL, citta_codice = NULL,
-                                     citta_nome = NULL, sort_param = NULL) {
+                                    denominazione = NULL, provincia_nome = NULL, citta_codice = NULL,
+                                    citta_nome = NULL, sort_param = NULL) {
   # Set the API endpoint for the /stazione-appaltante endpoint
   endpoint <- "/stazione-appaltante"
-  
+
   # Create the request URL with the specified parameters
   request_url <- paste0(url, endpoint, "?limit=", limit)
   if (!is.null(codice_fiscale)) request_url <- paste0(request_url, "&codice_fiscale=", codice_fiscale)
@@ -87,15 +87,13 @@ get_stazione_appaltante <- function(api_key, limit, codice_fiscale = NULL, parti
   if (!is.null(citta_codice)) request_url <- paste0(request_url, "&citta_codice=", citta_codice)
   if (!is.null(citta_nome)) request_url <- paste0(request_url, "&citta_nome=", citta_nome)
   if (!is.null(sort_param)) request_url <- paste0(request_url, "&sort_param=", sort_param)
-  
+
   # Make the API request with the API key in the header
   response <- GET(request_url, add_headers("x-api-key" = api_key))
-  
+
   # Return the response as a JSON object
   content(response, as = "parsed")
 }
-
-
 ```
 
 
@@ -104,7 +102,7 @@ To use any of these functions, simply provide the required inputs (such as the a
 
 ```{r apiUsageExamples, eval=FALSE}
 # free usage plan (limited to Rate 100 requests per second, Burst 100 requests,Quota 10,000 requests per month starting on the 1st day)
-free_usage_api_key = "m4JqlGtSl8aZyAIRyPzd3mPTFCO7VC2vo9O7Xpc0"
+free_usage_api_key <- "m4JqlGtSl8aZyAIRyPzd3mPTFCO7VC2vo9O7Xpc0"
 
 # Call the /aggiudicatari endpoint with a limit of 10 and a codice_fiscale of "6960001684"
 get_aggiudicatari(api_key = free_usage_api_key, limit = 10)
